# Raytracing

./: CMakeLists.txt  README.md  camera.c  camera.h  converter.py  dielectic.c  dielectric.h  hit.h  hitable_list.c  hitable_list.h  lambertian.c  lambertian.h  main.c  material.h  metal.c  metal.h  ray.h  rng.h  run.bat  sphere.c  sphere.h  vec3.c  vec3.h
